# meta-harness

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
configs/: platform.json
docs/: README.md  api-surface-v1.md  benchmark-spec-v2.md  contextatlas-benchmark-methodology.md  contextatlas-indexing-benchmark-v2.md  contextatlas-integration.md  eval-platform-evolution-plan.md  external-strategy-evaluation.md  platform-design.md
scripts/: bootstrap.sh  contextatlas_benchmark_probe.ts  contextatlas_benchmark_summary.py  contextatlas_first_pass_runner.py  contextatlas_health_check.ts  contextatlas_patch_eval.py  contextatlas_patch_proposal.py  contextatlas_run_eval.py  demo_openclaw_websearch_analysis.sh  demo_public_flow.sh  eval_data_analysis.py  eval_retrieval_dataset.py  eval_web_scrape.py  eval_white_box_audit.py  generate_llm_proposal.py
tests/: test_api.py  test_api_productization.py  test_benchmark_summary.py  test_candidates_dedupe.py  test_cli_benchmark.py  test_cli_candidates.py  test_cli_catalog.py  test_cli_compaction.py  test_cli_dataset.py  test_cli_integration.py  test_cli_method.py  test_cli_observe.py  test_cli_optimize.py  test_cli_run_archive.py  test_cli_run_execute.py  test_cli_run_export.py  test_cli_run_failures.py  test_cli_run_init.py  test_cli_run_score.py  test_cli_workflow.py  test_command_evaluator.py  test_config_loader.py  test_contextatlas_integration.py  test_data_analysis_evaluator.py  test_demo_assets.py  test_failure_index.py  test_first_pass_runner.py  test_gate_service.py  test_harness_loop_review.py  test_observation.py  (+19 more)
(+207 files in other folders)
